Le realice ultimos cambios a la pagina principal

--- a/gymlife-master/index.html
+++ b/gymlife-master/index.html
@@ -96,26 +96,27 @@
     <!-- Hero Section Begin -->
     <section class="hero-section">
         <div class="hs-slider owl-carousel">
-            <div class="hs-item set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hs-item set-bg" data-setbg="img/hero/hero-7.jpg">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 offset-lg-6">
+                        <div class="col-lg-7 offset-lg-5">
                             <div class="hi-text">
-                                <span>Shape your body</span>
-                                <h1>Be <strong>strong</strong> traning hard</h1>
-                                <a href="#" class="primary-btn">Get info</a>
+                                <span>Esculpe tu cuerpo</span>
+                                <h1>Rompe <strong>limites</strong> <strong>Entrena</strong> Duro</h1>
+                                <a href="#" class="primary-btn">Mas Informacion</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="hs-item set-bg" data-setbg="img/hero/hero-2.jpg">
+            <div class="hs-item set-bg" data-setbg="img/hero/hero-10.jpg">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 offset-lg-6">
+                        <div class="col-lg-7 offset-lg-5">
                             <div class="hi-text">
-                                <span>Shape your body</span>
-                                <h1>Be <strong>strong</strong> traning hard</h1>
+                                <span>No te rindas</span>
+                                <h1>vas a <strong>ganar</strong> 
+                                    <strong>y valdra la </strong> pena</h1>
                                 <a href="#" class="primary-btn">Registrese!</a>
                             </div>
                         </div>
@@ -249,7 +250,7 @@
     <!-- ChoseUs Section End -->
 
     <!-- Banner Section Begin -->
-    <section class="banner-section set-bg" data-setbg="img/banner-bg.jpg">
+    <!--<section class="banner-section set-bg" data-setbg="img/banner-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -261,7 +262,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- Banner Section End -->
 
     <!-- Pricing Section Begin -->
@@ -394,10 +395,10 @@
                 <div class="col-lg-12">
                     <div class="team-title">
                         <div class="section-title">
-                            <span>Our Team</span>
-                            <h2>TRAIN WITH EXPERTS</h2>
+                            <span>Nuestro Equipo</span>
+                            <h2>Entrena con Expertos</h2>
                         </div>
-                        <a href="#" class="primary-btn btn-normal appoinment-btn">appointment</a>
+                        <!--<a href="#" class="primary-btn btn-normal appoinment-btn">appointment</a>-->
                     </div>
                 </div>
             </div>
@@ -406,48 +407,48 @@
                     <div class="col-lg-4">
                         <div class="ts-item set-bg" data-setbg="img/team/team-1.jpg">
                             <div class="ts_text">
-                                <h4>Athart Rachel</h4>
-                                <span>Gym Trainer</span>
+                                <h4>Mauricio Barrios</h4>
+                                <span>Experto Fitness</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="ts-item set-bg" data-setbg="img/team/team-2.jpg">
                             <div class="ts_text">
-                                <h4>Athart Rachel</h4>
-                                <span>Gym Trainer</span>
+                                <h4>Farid Naffah</h4>
+                                <span>Nutricionista</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="ts-item set-bg" data-setbg="img/team/team-3.jpg">
                             <div class="ts_text">
-                                <h4>Athart Rachel</h4>
-                                <span>Gym Trainer</span>
+                                <h4>Alberto Cadena</h4>
+                                <span>Entrenador personal</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="ts-item set-bg" data-setbg="img/team/team-4.jpg">
                             <div class="ts_text">
-                                <h4>Athart Rachel</h4>
-                                <span>Gym Trainer</span>
+                                <h4>Osmin Hernandez</h4>
+                                <span>Entrenador Personal</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="ts-item set-bg" data-setbg="img/team/team-5.jpg">
                             <div class="ts_text">
-                                <h4>Athart Rachel</h4>
-                                <span>Gym Trainer</span>
+                                <h4>Sugar Ray Leonard</h4>
+                                <span>Entrenador Boxeo</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="ts-item set-bg" data-setbg="img/team/team-6.jpg">
                             <div class="ts_text">
-                                <h4>Athart Rachel</h4>
-                                <span>Gym Trainer</span>
+                                <h4>Nick Diaz</h4>
+                                <span>Entrenador Personal</span>
                             </div>
                         </div>
                     </div>
@@ -464,22 +465,79 @@
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-map-marker"></i>
-                        <p>333 Middle Winchendon Rd, Rindge,<br/> NH 03461</p>
+                        <p>Cra. 15 No. 93 - 60 Local 1-42 Piso 1.<br/> Bogotá DC.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-mobile"></i>
                         <ul>
-                            <li>125-711-811</li>
-                            <li>125-668-886</li>
+                            <li>2543038</li>
+                            <li>320 599 6385</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="gt-text email">
                         <i class="fa fa-envelope"></i>
-                        <p>Support.gymcenter@gmail.com</p>
+                        <p>wondergymcentral@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Get In Touch Section End -->
+    <div class="gettouch-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="gt-text">
+                        <i class="fa fa-map-marker"></i>
+                        <p>Carrera 79 # 41 Autopista Sur - 36<br/> Medellin - Antioquia</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="gt-text">
+                        <i class="fa fa-mobile"></i>
+                        <ul>
+                            <li>3857411</li>
+                            <li>310 679 1086</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="gt-text email">
+                        <i class="fa fa-envelope"></i>
+                        <p>wondergymed@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Get In Touch Section End -->
+     <!-- Get In Touch Section End -->
+     <div class="gettouch-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="gt-text">
+                        <i class="fa fa-map-marker"></i>
+                        <p>Centro Administrativo Municipal (CAM) Avenida 2 Norte #10 - 70<br/> Santiago de Cali - Valle del Cauca</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="gt-text">
+                        <i class="fa fa-mobile"></i>
+                        <ul>
+                            <li>3479326</li>
+                            <li>312 824 5212</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="gt-text email">
+                        <i class="fa fa-envelope"></i>
+                        <p>wondergymcali@gmail.com</p>
                     </div>
                 </div>
             </div>
