modificacion de header en planes y contacto, direcciones de contacto previas al footer en inicio y planes

--- a/gymlife-master/index.html
+++ b/gymlife-master/index.html
@@ -41,9 +41,9 @@
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./services.html">Planes</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./contact.html">Contacto y Sedes</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -61,7 +61,7 @@
                 <div class="col-lg-3">
                     <div class="logo">
                         <a href="./index.html">
-                            <img src="img/logo.jpg" alt="">
+                            <img src="img/logo.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                             <div class="hi-text">
                                 <span>No te rindas</span>
                                 <h1>vas a <strong>ganar</strong> 
-                                    <strong>y valdra la </strong> pena</h1>
+                                    <strong>valdra la </strong> pena</h1>
                                 <a href="#" class="primary-btn">Registrese!</a>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Por que escogernos?</span>
+                        <span>¿Por que escogernos?</span>
                         <h2>LLevate al limite!</h2>
                     </div>
                 </div>
@@ -255,9 +255,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="bs-text">
-                        <h2>registration now to get more deals</h2>
-                        <div class="bt-tips">Where health, beauty and fitness meet.</div>
-                        <a href="#" class="primary-btn  btn-normal">Appointment</a>
+                        <h2>regístrate ahora para obtener más ofertas</h2>
+                        <div class="bt-tips">Donde la salud, la belleza y el fitness se encuentran.</div>
+                        <a href="#" class="primary-btn  btn-normal">Inicio</a>
                     </div>
                 </div>
             </div>
@@ -360,7 +360,7 @@
             </div>
         </div>
     </section>
-    <!-- Pricing Section End -->
+    <!-- Gallery Section End -->
 
     <!-- Gallery Section Begin -->
     <div class="gallery-section">
@@ -456,7 +456,7 @@
             </div>
         </div>
     </section>
-    <!-- Team Section End -->
+    
 
     <!-- Get In Touch Section Begin -->
     <div class="gettouch-section">
@@ -554,13 +554,10 @@
                         <div class="fa-logo">
                             <a href="#"><img src="img/logo.png" alt=""></a>
                         </div>
-                        <p>Estamos listos para cumplir sus requerimientos. Si desea información útil o el asesoramiento de un profesional experimentado para gestionar un proyecto, contamos con la experiencia y herramientas necesarias para garantizar su éxito.</p>
+                        <p>El mejor equipamiento, las mejores instalaciones con los mejores instructores, solo faltas TU. <br/> ! INSCRIBETE YA ¡.</p>
                         <div class="fa-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
                             <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa  fa-envelope-o"></i></a>
                         </div>
                     </div>
                 </div>
@@ -568,7 +565,7 @@
                     <div class="fs-widget">
                         <h4>Accesos Directos</h4>
                         <ul>
-                            <li><a href="#">Servicios</a></li>
+                            <li><a href="#">Planes</a></li>
                             <li><a href="#">Contacto y Sedes</a></li>
                         </ul>
                     </div>
