--- a/gymlife-master/contact.html
+++ b/gymlife-master/contact.html
@@ -41,7 +41,7 @@
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./about-us.html">About Us</a></li>
                 <li><a href="./class-details.html">Classes</a></li>
                 <li><a href="./services.html">Planes</a></li>
@@ -84,23 +84,10 @@
                 <div class="col-lg-6">
                     <nav class="nav-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">About Us</a></li>
-                            <li><a href="./class-details.html">Classes</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./team.html">Our Team</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./about-us.html">About us</a></li>
-                                    <li><a href="./class-timetable.html">Classes timetable</a></li>
-                                    <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
-                                    <li><a href="./team.html">Our team</a></li>
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./blog.html">Our blog</a></li>
-                                    <li><a href="./404.html">404</a></li>
-                                </ul>
-                            </li>
-                            <li class="active"><a href="./contact.html">Contact</a></li>
+                            <li><a href="./index.html">Inicio</a></li>
+                            <li><a href="./services.html">Planes</a></li>
+                            <li><a href="./contact.html">Contacto y Sedes</a></li>
+                            
                         </ul>
                     </nav>
                 </div>
@@ -131,7 +118,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb-text">
-                        <h2>Contactenos</h2>
+                        <h2>Contactatenos</h2>
                         <div class="bt-option">
                             <a href="./index.html">Inico</a>
                             <a href="#">Pagina</a>
@@ -150,8 +137,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-title contact-title">
-                        <span>Contactenos</span>
-                        <h2>PONGASE EN CONTACTO</h2>
+                        <span>Contact Us</span>
+                        <h2>GET IN TOUCH</h2>
                     </div>
                     <div class="contact-widget">
                         <div class="cw-text">
@@ -167,18 +154,18 @@
                         </div>
                         <div class="cw-text email">
                             <i class="fa fa-envelope"></i>
-                            <p>Support.wondergymcenter@gmail.com</p>
+                            <p>Support.gymcenter@gmail.com</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="leave-comment">
                         <form action="#">
-                            <input type="text" placeholder="Nombre">
+                            <input type="text" placeholder="Name">
                             <input type="text" placeholder="Email">
-                            <input type="text" placeholder="Sitio Web">
-                            <textarea placeholder="Comentario"></textarea>
-                            <button type="submit">Enviar</button>
+                            <input type="text" placeholder="Website">
+                            <textarea placeholder="Comment"></textarea>
+                            <button type="submit">Submit</button>
                         </form>
                     </div>
                 </div>
