Modifique la pagina contacto, adicione una imagen en la cabecera y agregue los mapas de ubicacion para cada sede

--- a/gymlife-master/services.html
+++ b/gymlife-master/services.html
@@ -350,7 +350,7 @@
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-map-marker"></i>
-                        <p>Carrera 79 # 41 Autopista Sur - 36<br/> Medellin - Antioquia</p>
+                        <p>C.C Gran Plaza calle 45 No. 53-20<br/> Medellin - Antioquia</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -379,7 +379,7 @@
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-map-marker"></i>
-                        <p>Centro Administrativo Municipal (CAM) Avenida 2 Norte #10 - 70<br/> Santiago de Cali - Valle del Cauca</p>
+                        <p>C.C Centenario Av. 4 Nte. #7N- 46<br/> Santiago de Cali - Valle del Cauca</p>
                     </div>
                 </div>
                 <div class="col-md-4">
