--- a/gymlife-master/contact.html
+++ b/gymlife-master/contact.html
@@ -113,12 +113,12 @@
     <!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb-bg.jpg">
+    <section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb-bg2.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb-text">
-                        <h2>Contactatenos</h2>
+                        <h2><span>Contactenos</span></h2>
                         <div class="bt-option">
                             <a href="./index.html">Inico</a>
                             <a href="#">Pagina</a>
@@ -137,49 +137,146 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-title contact-title">
-                        <span>Contact Us</span>
-                        <h2>GET IN TOUCH</h2>
+                        <span>Sede</span>
+                        <h2>Bogota</h2>
                     </div>
                     <div class="contact-widget">
                         <div class="cw-text">
                             <i class="fa fa-map-marker"></i>
-                            <p>333 Middle Winchendon Rd, Rindge,<br/> NH 03461</p>
+                            <p>Cra. 15 No. 93 - 60 Local 1-42 Piso 1.<br/> Bogotá DC.</p>
+
                         </div>
                         <div class="cw-text">
                             <i class="fa fa-mobile"></i>
                             <ul>
-                                <li>125-711-811</li>
-                                <li>125-668-886</li>
+                                <li>2543038</li>
+                                <li>320 599 6385</li>
                             </ul>
                         </div>
                         <div class="cw-text email">
                             <i class="fa fa-envelope"></i>
-                            <p>Support.gymcenter@gmail.com</p>
+                            <p>wondergymcentral@gmail.com</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="leave-comment">
                         <form action="#">
-                            <input type="text" placeholder="Name">
+                            <input type="text" placeholder="Nombre">
                             <input type="text" placeholder="Email">
-                            <input type="text" placeholder="Website">
-                            <textarea placeholder="Comment"></textarea>
-                            <button type="submit">Submit</button>
+                            <input type="text" placeholder="Asunto">
+                            <textarea placeholder="Comentario"></textarea>
+                            <button type="submit">Enviar</button>
                         </form>
                     </div>
                 </div>
             </div>
             <div class="map">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12087.069761554938!2d-74.2175599360452!3d40.767139456514954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c254b5958982c3%3A0xb6ab3931055a2612!2sEast%20Orange%2C%20NJ%2C%20USA!5e0!3m2!1sen!2sbd!4v1581710470843!5m2!1sen!2sbd"
+                    src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=Cra. 15 No. 93 - 60 Local 1-42 Piso 1&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+                    height="550" style="border:0;" allowfullscreen=""></iframe>
+            </div>
+        </div>
+    </section>
+    <!-- Contact Section End -->
+    <!-- Contact Section Begin -->
+    <section class="contact-section spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="section-title contact-title">
+                        <span>Sede</span>
+                        <h2>Medellin</h2>
+                    </div>
+                    <div class="contact-widget">
+                        <div class="cw-text">
+                            <i class="fa fa-map-marker"></i>
+                            <p>C.C Gran Plaza calle 45 No. 53-20<br/> Medellin - Antioquia</p>
+
+                        </div>
+                        <div class="cw-text">
+                            <i class="fa fa-mobile"></i>
+                            <ul>
+                                <li>3857411</li>
+                                <li>310 679 1086</li>
+                            </ul>
+                        </div>
+                        <div class="cw-text email">
+                            <i class="fa fa-envelope"></i>
+                            <p>wondergymed@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="leave-comment">
+                        <form action="#">
+                            <input type="text" placeholder="Nombre">
+                            <input type="text" placeholder="Email">
+                            <input type="text" placeholder="Asunto">
+                            <textarea placeholder="Comentario"></textarea>
+                            <button type="submit">Enviar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="map">
+                <iframe
+                    src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=Centro Comercial Gran Plaza medellin&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+                    height="550" style="border:0;" allowfullscreen=""></iframe>
+            </div>
+        </div>
+    </section>
+    <!-- Contact Section End -->
+    <!-- Contact Section Begin -->
+    <section class="contact-section spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="section-title contact-title">
+                        <span>Sede</span>
+                        <h2>Cali</h2>
+                    </div>
+                    <div class="contact-widget">
+                        <div class="cw-text">
+                            <i class="fa fa-map-marker"></i>
+                            <p>C.C Centenario Av. 4 Nte. #7N- 46<br/> Santiago de Cali - Valle del Cauca</p>
+
+                        </div>
+                        <div class="cw-text">
+                            <i class="fa fa-mobile"></i>
+                            <ul>
+                                <li>3479326</li>
+                                <li>312 824 5212</li>
+                            </ul>
+                        </div>
+                        <div class="cw-text email">
+                            <i class="fa fa-envelope"></i>
+                            <p>wondergymcali@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="leave-comment">
+                        <form action="#">
+                            <input type="text" placeholder="Nombre">
+                            <input type="text" placeholder="Email">
+                            <input type="text" placeholder="Asunto">
+                            <textarea placeholder="Comentario"></textarea>
+                            <button type="submit">Enviar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="map">
+                <iframe
+                    src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=centro comercial centenario cali&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
                     height="550" style="border:0;" allowfullscreen=""></iframe>
             </div>
         </div>
     </section>
     <!-- Contact Section End -->
 
-    <!-- Get In Touch Section Begin -->
+    <!-- Get In Touch Section Begin 
     <div class="gettouch-section">
         <div class="container">
             <div class="row">
@@ -207,7 +304,7 @@
             </div>
         </div>
     </div>
-    <!-- Get In Touch Section End -->
+     Get In Touch Section End -->
 
     <!-- Footer Section Begin -->
     <section class="footer-section">
