--- a/gymlife-master/contact.html
+++ b/gymlife-master/contact.html
@@ -222,59 +222,57 @@
     </div>
     <!-- Get In Touch Section End -->
 
-    <!-- Footer Section Begin -->
-    <section class="footer-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="fs-about">
-                        <div class="fa-logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
-                        </div>
-                        <p>Estamos listos para cumplir sus requerimientos. Si desea información útil o el asesoramiento de un profesional experimentado para gestionar un proyecto, contamos con la experiencia y herramientas necesarias para garantizar su éxito.</p>
-                        <div class="fa-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa  fa-envelope-o"></i></a>
+        <!-- Footer Section Begin -->
+        <section class="footer-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="fs-about">
+                            <div class="fa-logo">
+                                <a href="#"><img src="img/logo.png" alt=""></a>
+                            </div>
+                            <p>El mejor equipamiento, las mejores instalaciones con los mejores instructores, solo faltas TU. <br/> ! INSCRIBETE YA ¡.</p>
+                            <div class="fa-social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
                         </div>
                     </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6">
+                        <div class="fs-widget">
+                            <h4>Accesos Directos</h4>
+                            <ul>
+                                <li><a href="#">Planes</a></li>
+                                <li><a href="#">Contacto y Sedes</a></li>
+                                <li><a href="#">Login-Registro</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6">
+                        <div class="fs-widget">
+                            <h4>Soporte</h4>
+                            <ul>
+                                <li><a href="#">Ingreso</a></li>
+                                <li><a href="#">Mi Cuenta</a></li>
+                                <li><a href="#">Subscribirse</a></li>
+                                <li><a href="#">Contacto</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="fs-widget">
-                        <h4>Accesos Directos</h4>
-                        <ul>
-                            <li><a href="#">Servicios</a></li>
-                            <li><a href="#">Contacto y Sedes</a></li>
-                        </ul>
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="copyright-text">
+                            <p>
+                                Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos resevados | E-3-17</a>
+    </p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="fs-widget">
-                        <h4>Soporte</h4>
-                        <ul>
-                            <li><a href="#">Ingreso</a></li>
-                            <li><a href="#">Mi Cuenta</a></li>
-                            <li><a href="#">Subscribirse</a></li>
-                            <li><a href="#">Contacto</a></li>
-                        </ul>
-                    </div>
-                </div>
-                
             </div>
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="copyright-text">
-                        <p>
-                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos resevados | E-3-17</a>
-</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Footer Section End -->
+        </section>
+        <!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
