--- a/gymlife-master/services.html
+++ b/gymlife-master/services.html
@@ -41,30 +41,18 @@
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">About Us</a></li>
-                <li><a href="./class-details.html">Classes</a></li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./services.html">Planes</a></li>
-                <li><a href="./team.html">Our Team</a></li>
-                <li><a href="#">Pages</a>
-                    <ul class="dropdown">
-                        <li><a href="./about-us.html">About us</a></li>
-                        <li><a href="./class-timetable.html">Classes timetable</a></li>
-                        <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
-                        <li><a href="./team.html">Our team</a></li>
-                        <li><a href="./gallery.html">Gallery</a></li>
-                        <li><a href="./blog.html">Our blog</a></li>
-                        <li><a href="./404.html">404</a></li>
+                <li><a href="./contact.html">Contacto y Sedes</a></li>
+                <li><a href="./registro.html">Login-Registro</a></li>
                     </ul>
                 </li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./contact.html">Contacto y Sedes</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
         <div class="canvas-social">
             <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-youtube-play"></i></a>
             <a href="#"><i class="fa fa-instagram"></i></a>
         </div>
     </div>
@@ -84,23 +72,10 @@
                 <div class="col-lg-6">
                     <nav class="nav-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">About Us</a></li>
-                            <li><a href="./classes.html">Classes</a></li>
-                            <li class="active"><a href="./services.html">Planes</a></li>
-                            <li><a href="./team.html">Our Team</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./about-us.html">About us</a></li>
-                                    <li><a href="./class-timetable.html">Classes timetable</a></li>
-                                    <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
-                                    <li><a href="./team.html">Our team</a></li>
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./blog.html">Our blog</a></li>
-                                    <li><a href="./404.html">404</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./index.html">Inicio</a></li>
+                            <li><a href="./services.html">Planes</a></li>
+                            <li><a href="./contact.html">Contacto y Sedes</a></li>
+                            <li><a href="./registro.html">Login-Registro</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -111,8 +86,6 @@
                         </div>
                         <div class="to-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
                             <a href="#"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
@@ -358,59 +331,57 @@
     </div>
     <!-- Get In Touch Section End -->
 
-    <!-- Footer Section Begin -->
-    <section class="footer-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="fs-about">
-                        <div class="fa-logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
-                        </div>
-                        <p>Estamos listos para cumplir sus requerimientos. Si desea información útil o el asesoramiento de un profesional experimentado para gestionar un proyecto, contamos con la experiencia y herramientas necesarias para garantizar su éxito.</p>
-                        <div class="fa-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa  fa-envelope-o"></i></a>
+        <!-- Footer Section Begin -->
+        <section class="footer-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="fs-about">
+                            <div class="fa-logo">
+                                <a href="#"><img src="img/logo.png" alt=""></a>
+                            </div>
+                            <p>El mejor equipamiento, las mejores instalaciones con los mejores instructores, solo faltas TU. <br/> ! INSCRIBETE YA ¡.</p>
+                            <div class="fa-social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
                         </div>
                     </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6">
+                        <div class="fs-widget">
+                            <h4>Accesos Directos</h4>
+                            <ul>
+                                <li><a href="#">Planes</a></li>
+                                <li><a href="#">Contacto y Sedes</a></li>
+                                <li><a href="#">Login-Registro</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6">
+                        <div class="fs-widget">
+                            <h4>Soporte</h4>
+                            <ul>
+                                <li><a href="#">Ingreso</a></li>
+                                <li><a href="#">Mi Cuenta</a></li>
+                                <li><a href="#">Subscribirse</a></li>
+                                <li><a href="#">Contacto</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="fs-widget">
-                        <h4>Accesos Directos</h4>
-                        <ul>
-                            <li><a href="#">Servicios</a></li>
-                            <li><a href="#">Contacto y Sedes</a></li>
-                        </ul>
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <div class="copyright-text">
+                            <p>
+                                Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos resevados | E-3-17</a>
+    </p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="fs-widget">
-                        <h4>Soporte</h4>
-                        <ul>
-                            <li><a href="#">Ingreso</a></li>
-                            <li><a href="#">Mi Cuenta</a></li>
-                            <li><a href="#">Subscribirse</a></li>
-                            <li><a href="#">Contacto</a></li>
-                        </ul>
-                    </div>
-                </div>
-                
             </div>
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="copyright-text">
-                        <p>
-                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos resevados | E-3-17</a>
-</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Footer Section End -->
+        </section>
+        <!-- Footer Section End -->
 
     <!-- Search model Begin -->
     <div class="search-model">
