--- a/gymlife-master/index.html
+++ b/gymlife-master/index.html
@@ -41,15 +41,9 @@
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
-<<<<<<< HEAD
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./services.html">Planes</a></li>
-                <li><a href="./contact.html">Contacto y Sedes</a></li>
-=======
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./services.html">Planes</a></li>
                 <li><a href="./contact.html">Contact</a></li>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -77,6 +71,7 @@
                             <li class="active"><a href="./index.html">Inicio</a></li>
                             <li><a href="./services.html">Planes</a></li>
                             <li><a href="./contact.html">Contacto y Sedes</a></li>
+                            <li><a href="./registro.html">Login-Registro</a></li>
                         </ul>
                     </nav>
                 </div>
