--- a/gymlife-master/index.html
+++ b/gymlife-master/index.html
@@ -105,15 +105,9 @@
                     <div class="row">
                         <div class="col-lg-7 offset-lg-5">
                             <div class="hi-text">
-<<<<<<< HEAD
-                                <span>Forma tu mente y tu cuerpo</span>
-                                <h1>Se <strong> Fuerte </strong> Entrenando tu mente</h1>
-                                <a href="#" class="primary-btn">Registrese!</a>
-=======
                                 <span>Esculpe tu cuerpo</span>
                                 <h1>Rompe <strong>limites</strong> <strong>Entrena</strong> Duro</h1>
                                 <a href="#" class="primary-btn">Mas Informacion</a>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                             </div>
                         </div>
                     </div>
@@ -124,14 +118,9 @@
                     <div class="row">
                         <div class="col-lg-7 offset-lg-5">
                             <div class="hi-text">
-<<<<<<< HEAD
-                                <span>Forma tu mente y tu cuerpo</span>
-                                <h1>Se <strong> Fuerte </strong> Entrenando Duro tu cuerpo</h1>
-=======
                                 <span>No te rindas</span>
                                 <h1>vas a <strong>ganar</strong> 
                                     <strong>y valdra la </strong> pena</h1>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                                 <a href="#" class="primary-btn">Registrese!</a>
                             </div>
                         </div>
@@ -148,13 +137,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-<<<<<<< HEAD
-                        <span>¿POR QUÉ ELEGIRNOS?</span>
-                        <h2>PRECIONA TUS LIMITES AL MAXIMO</h2>
-=======
                         <span>Por que escogernos?</span>
                         <h2>LLevate al limite!</h2>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                     </div>
                 </div>
             </div>
@@ -162,53 +146,29 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-034-stationary-bike"></span>
-<<<<<<< HEAD
-                        <h4>Equipamiento Moderno</h4>
-                        <p>Contamos con los mas modernos equipos para que tu lleves tu cuerpo 
-                            al siguiente nivel.</p>
-=======
                         <h4>Equipamento Moderno</h4>
                         <p>Acceda a amplias gamas en equipos de calidad profesional, duradera y óptima.</p>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-033-juice"></span>
-<<<<<<< HEAD
-                        <h4>Plan Nutricional</h4>
-                        <p>tenemos un equipo dispuesto para realizar el mejor plan nutricional que complemente 
-                            tu esfuerzo.</p>
-=======
                         <h4>Plan Nutricion Saludable</h4>
                         <p>Te damos una mano para alcanzar metas nutricionales, manteniendo una buena alimentación mediante un seguimiento de un grupo de expertos.</p>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-002-dumbell"></span>
-<<<<<<< HEAD
-                        <h4>Plan de Competicion</h4>
-                        <p>Preparate con los mejores para competir a nivel profecional nacional o
-                            internacional.</p>
-=======
                         <h4>Plan Entrenamiento Profesional</h4>
                         <p>Estamos especializados en Rutinas de Gimnasio y en técnicas de musculación tanto para principiantes que se acaban de apuntar al gimnasio como para los más avanzados.</p>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="cs-item">
                         <span class="flaticon-014-heart-beat"></span>
-<<<<<<< HEAD
-                        <h4>Seguimiento Medico</h4>
-                        <p>Contamos con alianzas medicas para llevar controles detallados de tu progreso
-                            y salud.</p>
-=======
                         <h4>Unico a tus Necesidades</h4>
                         <p>Contamos con precios accesibles que incluyan todos nuestros servicios, aplicamos todos los protocolos para que puedas entrenar de forma segura.</p>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                     </div>
                 </div>
             </div>
@@ -222,13 +182,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-<<<<<<< HEAD
-                        <span>Nuestras Clases</span>
-                        <h2>TE OFRECEMOS </h2>
-=======
                         <span>Beneficios</span>
                         <h2>Lo que Podemos Ofrecerte</h2>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                     </div>
                 </div>
             </div>
@@ -239,13 +194,8 @@
                             <img src="img/classes/class-1.jpg" alt="">
                         </div>
                         <div class="ci-text">
-<<<<<<< HEAD
-                            <span>GIMNASIA</span>
-                            <h5>AeroRumba</h5>
-=======
                             <span>FUERZA</span>
                             <h5>Halterofilia</h5>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -256,13 +206,8 @@
                             <img src="img/classes/class-2.jpg" alt="">
                         </div>
                         <div class="ci-text">
-<<<<<<< HEAD
-                            <span>PILATES</span>
-                            <h5>Respira y Ejercita</h5>
-=======
                             <span>Cardio</span>
                             <h5>Trotadoras</h5>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -273,13 +218,8 @@
                             <img src="img/classes/class-3.jpg" alt="">
                         </div>
                         <div class="ci-text">
-<<<<<<< HEAD
-                            <span>FUNCIONAL</span>
-                            <h5>Un cuerpo sano, se mueve, funciona y vive.</h5>
-=======
                             <span>Nutrición</span>
                             <h5>Suplementos</h5>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -290,13 +230,8 @@
                             <img src="img/classes/class-4.jpg" alt="">
                         </div>
                         <div class="ci-text">
-<<<<<<< HEAD
-                            <span>COMPETICION</span>
-                            <h4>Preparate para competir</h4>
-=======
                             <span>Relajacion</span>
                             <h4>Spa</h4>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -307,13 +242,8 @@
                             <img src="img/classes/class-5.jpg" alt="">
                         </div>
                         <div class="ci-text">
-<<<<<<< HEAD
-                            <span>BOXING</span>
-                            <h4></h4>
-=======
                             <span>Entrenamiento</span>
                             <h4>Boxeo</h4>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                             <a href="#"><i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
@@ -339,21 +269,12 @@
     </section>-->
     <!-- Banner Section End -->
 
-<<<<<<< HEAD
-    <!-- Gallery Section Begin -->
-    <section class="pricing-section spad">
-=======
     <!-- Pricing Section Begin -->
     <section class="pricing-section service-pricing spad">
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-<<<<<<< HEAD
-                        <span>Galeria</span>
-                        <h2>Fotos</h2>
-=======
                         <span>Nuestros Planes</span>
                         <h2>ESCOGE TU PLAN DE PRECIOS</h2>
                     </div>
@@ -422,7 +343,6 @@
                         </ul>
                         <a href="#" class="primary-btn pricing-btn">Inscribirse!</a>
                         <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-8">
@@ -472,9 +392,6 @@
     </div>
     <!-- Gallery Section End -->
 
-<<<<<<< HEAD
-
-=======
     <!-- Team Section Begin -->
     <section class="team-section spad">
         <div class="container">
@@ -542,7 +459,6 @@
                 </div>
             </div>
         </div>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
     </section>
     
 
@@ -553,9 +469,6 @@
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-map-marker"></i>
-<<<<<<< HEAD
-                        <p>Cl. 51 Nte. #5b Norte-93 a 5b Norte-1 ,<br/> La Flora - Cali - Valle del Cauca </p>
-=======
                         <p>Cra. 15 No. 93 - 60 Local 1-42 Piso 1.<br/> Bogotá DC.</p>
                     </div>
                 </div>
@@ -563,7 +476,7 @@
                     <div class="gt-text">
                         <i class="fa fa-mobile"></i>
                         <ul>
-                            <li>2543038</li>
+                            <li>(601) 2543038</li>
                             <li>320 599 6385</li>
                         </ul>
                     </div>
@@ -591,7 +504,7 @@
                     <div class="gt-text">
                         <i class="fa fa-mobile"></i>
                         <ul>
-                            <li>3857411</li>
+                            <li>(604) 3857411</li>
                             <li>310 679 1086</li>
                         </ul>
                     </div>
@@ -613,27 +526,22 @@
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-map-marker"></i>
-                        <p>Centro Administrativo Municipal (CAM) Avenida 2 Norte #10 - 70<br/> Santiago de Cali - Valle del Cauca</p>
+                        <p> Cl. 5 Nte. # 2n54<br/> Santiago de Cali - Valle del Cauca</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="gt-text">
                         <i class="fa fa-mobile"></i>
                         <ul>
-                            <li>3479326</li>
+                            <li>(602) 3479326</li>
                             <li>312 824 5212</li>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                         </ul>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="gt-text email">
                         <i class="fa fa-envelope"></i>
-<<<<<<< HEAD
-                        <p>Info.wondergym@gmail.com</p>
-=======
                         <p>wondergymcali@gmail.com</p>
->>>>>>> 29f0e525b6fe501bae5c326c8840f6bf53dcdee0
                     </div>
                 </div>
             </div>
