Organizar pagina login

--- a/registro.html
+++ b/registro.html
@@ -116,6 +116,31 @@
     <!-- Breadcrumb Section End -->
 
     <!--Form Register Begin-->
+    <!-- Contact Section Begin -->
+    <section class="contact-section spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="section-title contact-title">
+                        <span>Login-Registro</span>
+                        <h2> </h2>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="leave-comment">
+                        <form action="#">
+                            <input type="text" placeholder="Ingrese su Nombre">
+                            <input type="text" placeholder="Ingrese su Apellido">
+                            <input type="email" placeholder="Ingrese su Email">
+                            <input type="text" placeholder="Ingrese su  Direccion">
+                            <input type="text" placeholder="Fecha de Nacimiento">
+                            <input type="password" placeholder="Ingrese su contraseña">
+                            <button type="submit">Registrar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
     <div>
         <section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb-bg.jpg"></section>
          <section class="form-register">
