--- a/gymlife-master/contact.html
+++ b/gymlife-master/contact.html
@@ -127,20 +127,20 @@
                         <h2>UN REPRESENTANTE  DE   </h2>
                         <h2>NUESTRO EQUIPO ESPECIALIZADO </h2>
                     </div>
-                    <div class="contact-widget">
-                        <div class="cw-text">
-                            <i class="fa fa-map-marker"></i>
+                    <div class="          ">
+                        <div class="       ">
+                            <i class="                  "></i>
                             <p><br/> </p>
                         </div>
                         <div class="cw-text">
-                            <i class="fa fa-mobile"></i>
+                            <i class="                  "></i>
                             <ul>
                                 <li></li>
                                 <li></li>
                             </ul>
                         </div>
                         <div class="cw-text email">
-                            <i class="fa fa-envelope"></i>
+                            <i class="                   "></i>
                             <p></p>
                         </div>
                     </div>
@@ -167,8 +167,65 @@
     </section>
     <!-- Contact Section End -->
 
+    <!-- Get In Touch Section Begin -->
+    <div class="gettouch-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="gt-text">
+                        <i class="fa fa-map-marker"></i>
+                        <p>Cra. 15 No. 93 - 60 Local 1-42 Piso 1.<br/> Bogotá DC.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="gt-text">
+                        <i class="fa fa-mobile"></i>
+                        <ul>
+                            <li>(601) 2543038</li>
+                            <li>320 599 6385</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="gt-text email">
+                        <i class="fa fa-envelope"></i>
+                        <p>wondergymcentral@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Get In Touch Section End -->
     <div class="gettouch-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="gt-text">
+                        <i class="fa fa-map-marker"></i>
+                        <p>Carrera 79 # 41 Autopista Sur - 36<br/> Medellin - Antioquia</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="gt-text">
+                        <i class="fa fa-mobile"></i>
+                        <ul>
+                            <li>(604) 3857411</li>
+                            <li>310 679 1086</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="gt-text email">
+                        <i class="fa fa-envelope"></i>
+                        <p>wondergymed@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Get In Touch Section End -->
+     <!-- Get In Touch Section End -->
+     <div class="gettouch-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
